# O3DESharp

./: .gitignore  ADVANCED_FEATURES.md  CMakeLists.txt  GENERATED_BINDINGS_GUIDE.md  O3DESharp.sln  PHASE_18_EBUS.md  README.md  RELEASE_NOTES.md  SCRIPTING_GUIDE.md  binding_config.json  gem.json
.github/workflows/: ci.yml
.teamcity/: README.md  pom.xml  settings.kts
Assets/Scripts/Examples/: PlayerController.cs  ReflectionExample.cs
Assets/Scripts/O3DE.Core/: Debug.cs  Debugger.cs  EBusAttributes.cs  Entity.cs  ExposedProperty.cs  Input.cs  InternalCalls.cs  O3DE.Core.csproj  Physics.cs  ScriptComponent.cs  Time.cs  Transform.cs
Assets/Scripts/O3DE.Core.Tests/: DebugTests.cs  DebuggerTests.cs  EntityGetChildrenTests.cs  NativeReflectionSerializationTests.cs  O3DE.Core.Tests.csproj
Assets/Scripts/O3DESharp/: BehaviorContextReflector.g.cs  CSharpEditorToolsRequests.g.cs  CSharpScriptClassPropertyHandler.g.cs  (+40 more)
Code/: CMakeLists.txt  o3desharp_api_files.cmake  o3desharp_copy_if_exists.cmake  o3desharp_editor_private_files.cmake  o3desharp_editor_shared_files.cmake  o3desharp_editor_tests_files.cmake  o3desharp_netverify.cmake  o3desharp_private_files.cmake  o3desharp_runtime_bundle.cmake  o3desharp_shared_files.cmake  o3desharp_tests_files.cmake
Code/Include/O3DESharp/: O3DESharpBus.h  O3DESharpExposedPropertyBus.h  O3DESharpFeatureProcessorInterface.h  O3DESharpHotReloadBus.h  O3DESharpTypeIds.h
Code/Platform/Android/: PAL_android.cmake  o3desharp_private_files.cmake
Code/Platform/Linux/: o3desharp_private_files.cmake  o3desharp_shared_files.cmake
Code/Platform/Mac/: PAL_mac.cmake  o3desharp_private_files.cmake
Code/Platform/Windows/: o3desharp_private_files.cmake
Code/Platform/iOS/: PAL_ios.cmake  o3desharp_private_files.cmake
Code/Source/: O3DESharpModuleInterface.cpp  O3DESharpModuleInterface.h
Code/Source/Clients/: O3DESharpModule.cpp  O3DESharpSystemComponent.cpp  O3DESharpSystemComponent.h
Code/Source/Components/: O3DESharpComponent.cpp  O3DESharpComponent.h  O3DESharpComponentController.cpp  O3DESharpComponentController.h
Code/Source/Render/: O3DESharpFeatureProcessor.cpp  O3DESharpFeatureProcessor.h
Code/Source/Scripting/: CSharpScriptComponent.cpp  CSharpScriptComponent.h  CoralHostManager.cpp  CoralHostManager.h  CoralNativeThunkHost.cpp  CoralNativeThunkHost.h  ExportAttributes.h  ScriptBindings.cpp  ScriptBindings.h
Code/Source/Scripting/Marshaling/: BehaviorContextMarshaling.cpp  BehaviorContextMarshaling.h
Code/Source/Scripting/Reflection/: BehaviorContextReflector.cpp  BehaviorContextReflector.h  GenericDispatcher.cpp  GenericDispatcher.h  ReflectionDataExporter.cpp  ReflectionDataExporter.h
Code/Source/Tools/: CSharpAssemblyWatcher.cpp  CSharpAssemblyWatcher.h  CSharpEditorToolsBus.h  O3DESharpEditorModule.cpp  O3DESharpEditorSystemComponent.cpp  O3DESharpEditorSystemComponent.h
Code/Source/Tools/Components/: CSharpExposedPropertiesHandler.cpp  CSharpExposedPropertiesHandler.h  CSharpScriptClassPropertyHandler.cpp  CSharpScriptClassPropertyHandler.h  EditorCSharpScriptComponent.cpp  EditorCSharpScriptComponent.h  EditorO3DESharpComponent.cpp  EditorO3DESharpComponent.h
Code/Tests/Clients/: O3DESharpTest.cpp
Code/Tests/Tools/: O3DESharpEditorTest.cpp
Code/Tools/BindingGenerator.Tests/: BindingConfigLoaderTests.cs  BindingGenerator.Tests.csproj  DeterministicOrderingTests.cs  EBusSourceGeneratorTests.cs  ExposedPropertyTests.cs  GeneratorUnitTests.cs  IntegrationTests.cs  O3DEHeaderParserTests.cs  README.md  ReflectionDataPathResolverTests.cs  ReflectionGeneratorTests.cs  TestFixtures.cs
Code/Tools/BindingGenerator.Tests/Stubs/: DebugStub.cs
Code/Tools/BindingGenerator/ExampleGem/: ExampleHeader.h
Code/Tools/BindingGenerator/O3DESharp.BindingGenerator/: O3DESharp.BindingGenerator.csproj  Program.cs  README.md
Code/Tools/BindingGenerator/O3DESharp.BindingGenerator.Tasks/: GenerateBindingsTask.cs  O3DESharp.BindingGenerator.Tasks.csproj
Code/Tools/BindingGenerator/O3DESharp.BindingGenerator.Tasks/buildMultiTargeting/: O3DESharp.BindingGenerator.Tasks.props  O3DESharp.BindingGenerator.Tasks.targets
Code/Tools/BindingGenerator/O3DESharp.BindingGenerator/Caching/: BuildCache.cs  FileHasher.cs
Code/Tools/BindingGenerator/O3DESharp.BindingGenerator/Configuration/: BindingConfig.cs  BindingConfigLoader.cs  ReflectionDataPathResolver.cs  ReflectionDataSchema.cs
Code/Tools/BindingGenerator/O3DESharp.BindingGenerator/GemDiscovery/: GemDescriptor.cs  GemDiscoveryService.cs
Code/Tools/BindingGenerator/O3DESharp.BindingGenerator/Generation/: CSharpCodeGenerator.cs  CSharpProjectGenerator.cs  CppRegistrationGenerator.cs  ExtensionMethodGenerator.cs  MetadataGenerator.cs  MultiGemBindingGenerator.cs  ReflectionBindingGenerator.cs
Code/Tools/BindingGenerator/O3DESharp.BindingGenerator/Parsing/: O3DEHeaderParser.cs  ParsedBindings.cs  TypeMapper.cs
Code/Tools/RuntimeBundle/probe/: Program.cs  probe.csproj
Code/Tools/SourceGenerators/: EBusHandlerGenerator.cs  O3DESharp.SourceGenerators.csproj
Code/Tools/SourceGenerators.Tests/: SmokeTestComponent.cs  SourceGenerators.Smoke.csproj
Editor/Scripts/: __init__.py  csharp_binding_generator.py  csharp_editor_bootstrap.py  csharp_editor_tools.py  csharp_platform_utils.py  csharp_project_manager.py  gem_dependency_resolver.py  generate_bindings.py
Editor/Tests/: README.md  conftest.py  pytest.ini  test_clangsharp_invoker.py  test_csharp_editor_tools_build.py  test_csharp_editor_tools_picker.py  test_csharp_editor_tools_validation.py  test_csharp_platform_utils.py  test_dotnet_resolution_wired.py  test_gem_dependency_resolver.py  test_gem_metadata.py  test_platform_cmake_parity.py  test_runtime_bundle_contents.py  test_sp0_verify_divergence.py  test_type_mapper.py
ExportScripts/: export_project_with_csharp.py  o3desharp_export_utils.py
Gems/O3DE.FirstPersonController/: O3DE.FirstPersonController.csproj  README.md  gem.json
Rescued/1b-native-trampoline/: README.md  o3desharp_private_files.cmake.patch
Tools/: sp0_verify_divergence.py
docs/: sp0-divergence-manifest.md
(+50 files in other folders)
